# lcd-UBA-knowledgebase

./: PLANS.md  README.md  guidance.md  milestones.md  notes0319.md  pyproject.toml
data/lcd/chunks/: page_chunk_doc.v1.jsonl  post_chunk_doc.v1.jsonl
data/lcd/indexes/: title_slug_index.json
data/lcd/manifests/: run_manifest.json
data/lcd/normalized/: page_doc.v1.jsonl  post_doc.v1.jsonl
data/lcd/raw/pages/: pages-page-0001.json
data/lcd/raw/posts/: posts-page-0001.json
data/lcd/registry/: latest_trusted.json
data/lcd/runs/test_promotion_semantics/chunks/: page_chunk_doc.v1.jsonl
data/lcd/runs/test_promotion_semantics/indexes/: title_slug_index.json
data/lcd/runs/test_promotion_semantics/registry/: run_manifest.json  run_status.json
docs/: lcd_ingest_scope_v1.md  runbook_lcd_ingest.md
docs/contracts/: chunk_doc_v1.md  page_doc_v1.md
docs/frozen_context/: agent_self_placement_and_next_milestone.md  current_phase_after_bootstrap.md
examples/: chunk_doc_v1.example.json  page_doc_v1.example.json
schemas/: chunk_doc_v1.json  page_doc_v1.json  run_manifest_v1.json
src/lcd_kb/: __init__.py  cli.py
src/lcd_kb/checks/: validation.py
src/lcd_kb/consumers/: indexer.py  reader.py
src/lcd_kb/normalize/: chunking.py  page_doc.py
src/lcd_kb/registry/: manifest.py  run_lifecycle.py
src/lcd_kb/sources/: wordpress_rest.py
tests/: test_chunking.py  test_cli.py  test_indexer.py  test_manifest.py  test_page_doc.py  test_reader.py  test_run_lifecycle.py  test_validation.py  test_wordpress_rest.py
(+5 files in other folders)
