[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lcd-kb"
version = "0.1.0"
description = "Starter tools and contracts for the LCD UBA knowledgebase pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
lcd-kb = "lcd_kb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
